# c-entropy-script

./: CMakeLists.txt  main.cpp  test.cpp  version.h
CES/: CES.cpp  Constants.cpp  Context.cpp  Lexer.cpp  Node.cpp  Parser.cpp  Primitive.cpp  Token.cpp  util.cpp
Grammer/: interface.es
Test/: framework.h
include/: Argument.h  CES.h  Constants.h  Context.h  Error.h  Lexer.h  Node.h  Parser.h  Position.h  Primitive.h  RTResult.h  Symbol.h  Token.h  bigint.h  util.h
src/: CES.cpp  Context.cpp  Node.cpp  Parser.cpp  Primitive.cpp
test/: framework.h
test/general/: basic.cpp
